--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_staggered_animations: ^1.1.1
   percent_indicator: ^4.2.3
+  flutter_slidable: ^3.1.0
   
 
 
