--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   firebase_auth: ^5.1.1 
   cloud_firestore: ^5.0.2 
   provider: ^6.1.2
-  flutter_local_notifications: ^16.3.0
   intl: ^0.18.0
   fl_chart: ^0.65.0 
   table_calendar: ^3.0.9
@@ -45,10 +44,9 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   percent_indicator: ^4.2.3
   flutter_slidable: ^3.1.0
+  flutter_local_notifications: ^19.4.2
+  timezone: ^0.10.1
   
-
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
